--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
 
-    <H1>HEJ DETTA ÄR MIN HEMSIDA</H1>
+    <H1>Dagens citat</H1>
+    <p>Det är bara döda fiskar som flyter med strömen</p>
 
 
     <script src="main.js"></script>
